syntax = "proto3";

import "google/protobuf/empty.proto"

package protobuf;

message ReturnValue {
  bytes hash = 1;
  bytes data = 2;
}

message SearchKey {
  int32 node = 1;
  bytes key = 2;
}

message SetKey {
  bytes key = 1;
  bytes hash = 2;
  bytes data = 3;
}

service Licht {
  rpc RequestKey(SearchKey) returns (ReturnValue);

  rpc SetKV(SetKey) returns (google.protobuf.Empty);
}
